Fix vertical alignment in about-container for improved layout

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -38,7 +38,7 @@ nav a {
   .about-container {
     display: flex;
     justify-content: space-between; /* Space between text and image */
-    align-items: left; /* Vertically center content */
+    align-items: center; /* Vertically center content */
     gap: 20px; /* Add some space between the text and image */
   }
   
